--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class='row'>
-        <div class='col md-12'>
+        <div class='col-md-12'>
           <h1>Latest Mars News</h1>
           <h3>{{ facts.latest_news_title }}</h3>
           <p>{{ facts.latest_news_p }}</p>
